# Email-Triage

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  data.py  env.py  tasks.py
